[gd_scene load_steps=20 format=2]

[ext_resource path="res://Nodes/PlayerNode/PlayerMenus/PlayerMenus.gd" type="Script" id=1]
[ext_resource path="res://Nodes/PlayerNode/PlayerMenus/MainMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Nodes/PlayerNode/PlayerMenus/MainMenu/Buttons.gd" type="Script" id=3]
[ext_resource path="res://Nodes/PlayerNode/PlayerMenus/MainMenu/MainMenuButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Reused/AnimalFriendMaker/Nodes/AnimalFriendMaker/AnimalFriendMaker.tscn" type="PackedScene" id=5]
[ext_resource path="res://Nodes/PlayerNode/PlayerMenus/PlayerSaveSelect/PlayerSaveSelect.tscn" type="PackedScene" id=6]
[ext_resource path="res://Reused/ReusableSystems/OptionEditor/OptionEditor.tscn" type="PackedScene" id=7]
[ext_resource path="res://Reused/ReusableSystems/DTabContainer/DTabContainer.tscn" type="PackedScene" id=8]
[ext_resource path="res://Resources/Image/Back.png" type="Texture" id=9]
[ext_resource path="res://Reused/ReusableSystems/OptionEditor/OptionItem/ItemSlider/ItemSlider.tscn" type="PackedScene" id=10]
[ext_resource path="res://Reused/ReusableSystems/OptionEditor/OptionItem/ItemBool/ItemBool.tscn" type="PackedScene" id=11]
[ext_resource path="res://Nodes/PlayerNode/PlayerMenus/Settings.gd" type="Script" id=12]
[ext_resource path="res://Reused/ReusableSystems/OptionEditor/OptionContainer/OptionContainer.tscn" type="PackedScene" id=13]

[sub_resource type="Curve" id=1]
min_value = -500.0
max_value = 100.0
_data = [ Vector2( 0, -500 ), 0.0, 1436.36, 0, 0, Vector2( 0.825472, 18.1818 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=2]
min_value = -500.0
max_value = 0.0
_data = [ Vector2( 0, 0 ), 0.0, -578.182, 0, 0, Vector2( 1, -500 ), -481.818, 0.0, 0, 0 ]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float wiggle_freq = 28.0;
uniform float wiggle_length = 0.03;
uniform float x_offset = 12.0;

void fragment() {
	float wiggle = (sin(TIME + (UV.y * wiggle_freq)) + x_offset) * wiggle_length;
	float line = round(abs(UV.x - 1.0) + wiggle);
	COLOR.a = line * COLOR.a;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/wiggle_freq = 28.0
shader_param/wiggle_length = 0.03
shader_param/x_offset = 12.0

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:main_menu_anim_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -200, 0 ), Vector2( -700, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
length = 0.35
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath(".:main_menu_anim_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.35 ),
"transitions": PoolRealArray( 0.5, -2, 1 ),
"update": 0,
"values": [ Vector2( -700, 0 ), Vector2( -100, 0 ), Vector2( -200, 0 ) ]
}

[node name="PlayerMenus" type="Control" groups=["Game"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Screens" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Control" parent="Screens"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
open_anim_x_curve = SubResource( 1 )
exit_anim_x_curve = SubResource( 2 )

[node name="Background" type="ColorRect" parent="Screens/MainMenu"]
material = SubResource( 4 )
anchor_bottom = 1.0
margin_left = -200.0
margin_right = 500.0
color = Color( 0, 0, 0, 0.745098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Screens/MainMenu"]
anchor_bottom = 1.0
margin_right = 427.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Buttons" type="VBoxContainer" parent="Screens/MainMenu/ScrollContainer"]
margin_right = 427.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource( 3 )

[node name="ResumeButton" parent="Screens/MainMenu/ScrollContainer/Buttons" instance=ExtResource( 4 )]
margin_top = 50.0
margin_bottom = 150.0
button_name = "Resume"

[node name="GameButton" parent="Screens/MainMenu/ScrollContainer/Buttons" instance=ExtResource( 4 )]
visible = false
margin_top = 154.0
margin_bottom = 254.0
button_name = "Game"

[node name="CharacterButton" parent="Screens/MainMenu/ScrollContainer/Buttons" instance=ExtResource( 4 )]
margin_top = 258.0
margin_bottom = 358.0
button_name = "Character"

[node name="OnlineButton" parent="Screens/MainMenu/ScrollContainer/Buttons" instance=ExtResource( 4 )]
margin_top = 362.0
margin_bottom = 462.0
button_name = "Online"

[node name="SettingsButton" parent="Screens/MainMenu/ScrollContainer/Buttons" instance=ExtResource( 4 )]
margin_top = 466.0
margin_bottom = 566.0
button_name = "Settings"

[node name="QuitButton" parent="Screens/MainMenu/ScrollContainer/Buttons" instance=ExtResource( 4 )]
margin_top = 570.0
margin_bottom = 670.0
button_name = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Screens/MainMenu"]
anims/ExitMainMenu = SubResource( 5 )
anims/OpenMainMenu = SubResource( 6 )

[node name="AnimalFriendMaker" parent="Screens" instance=ExtResource( 5 )]
visible = false

[node name="PlayerSaveSelect" parent="Screens" instance=ExtResource( 6 )]
visible = false

[node name="ExitButton" parent="Screens/PlayerSaveSelect" index="2"]
visible = false

[node name="Settings" type="Control" parent="Screens"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_Background" type="ColorRect" parent="Screens/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DTabContainer" parent="Screens/Settings" instance=ExtResource( 8 )]

[node name="General" parent="Screens/Settings/DTabContainer/Content" index="0" instance=ExtResource( 7 )]
file_location = ""

[node name="Options" parent="Screens/Settings/DTabContainer/Content/General" instance=ExtResource( 13 )]

[node name="OptionContainer" parent="Screens/Settings/DTabContainer/Content/General/Options" index="0"]
margin_bottom = 660.0

[node name="Camera Sensitivity X" parent="Screens/Settings/DTabContainer/Content/General/Options/OptionContainer" index="0" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 60.0
default_value = [ 25 ]

[node name="Camera Sensitivity Y" parent="Screens/Settings/DTabContainer/Content/General/Options/OptionContainer" index="1" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 64.0
margin_right = 1280.0
margin_bottom = 124.0
default_value = [ 25 ]

[node name="Camera Invert Y" parent="Screens/Settings/DTabContainer/Content/General/Options/OptionContainer" index="2" instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 128.0
margin_right = 1280.0
margin_bottom = 188.0

[node name="BackButton" type="Button" parent="Screens/Settings"]
margin_left = 5.0
margin_top = 5.0
margin_right = 105.0
margin_bottom = 60.0
focus_neighbour_right = NodePath("../DTabContainer/TabScrollContainer/TabHBoxContainer")
focus_neighbour_bottom = NodePath("../DTabContainer/Content")
text = " Back"
icon = ExtResource( 9 )

[connection signal="tree_exiting" from="." to="." method="_on_CharacterMenus_tree_exiting"]
[connection signal="exit_main_menu" from="Screens/MainMenu/ScrollContainer/Buttons" to="." method="_on_Buttons_exit_main_menu"]
[connection signal="pressed" from="Screens/MainMenu/ScrollContainer/Buttons/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Screens/MainMenu/ScrollContainer/Buttons/GameButton" to="Screens/MainMenu" method="_on_GameButton_pressed"]
[connection signal="pressed" from="Screens/MainMenu/ScrollContainer/Buttons/CharacterButton" to="." method="_on_CharacterButton_pressed"]
[connection signal="pressed" from="Screens/MainMenu/ScrollContainer/Buttons/OnlineButton" to="Screens/MainMenu" method="_on_OnlineButton_pressed"]
[connection signal="pressed" from="Screens/MainMenu/ScrollContainer/Buttons/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Screens/MainMenu/ScrollContainer/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="animation_finished" from="Screens/MainMenu/AnimationPlayer" to="Screens/MainMenu" method="_on_AnimationPlayer_animation_finished"]
[connection signal="exit" from="Screens/AnimalFriendMaker" to="." method="exit_af_maker"]
[connection signal="exit" from="Screens/PlayerSaveSelect" to="." method="_on_PlayerSaveSelect_exit"]
[connection signal="loaded_save" from="Screens/PlayerSaveSelect" to="." method="_on_PlayerSaveSelect_loaded_save"]
[connection signal="exit" from="Screens/Settings" to="." method="_on_Settings_exit"]
[connection signal="tab_looped" from="Screens/Settings/DTabContainer" to="Screens/Settings" method="_on_DTabContainer_tab_looped"]
[connection signal="option_changed" from="Screens/Settings/DTabContainer/Content/General" to="Screens/Settings" method="_on_General_option_changed"]
[connection signal="save" from="Screens/Settings/DTabContainer/Content/General" to="Screens/Settings" method="_on_General_save"]
[connection signal="cancel" from="Screens/Settings/DTabContainer/Content/General/Options" to="Screens/Settings/DTabContainer/Content/General" method="_on_Options_cancel"]
[connection signal="looped" from="Screens/Settings/DTabContainer/Content/General/Options" to="Screens/Settings" method="_on_Options_looped"]
[connection signal="pressed" from="Screens/Settings/BackButton" to="Screens/Settings" method="_on_BackButton_pressed"]

[editable path="Screens/PlayerSaveSelect"]
[editable path="Screens/Settings/DTabContainer"]
[editable path="Screens/Settings/DTabContainer/Content/General"]
[editable path="Screens/Settings/DTabContainer/Content/General/Options"]
